[package]
name = "ssb-event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
kuska-ssb = "0.4.0"
# kuska-handshake = { git = "https://github.com/Kuska-ssb/handshake.git", features = ["async_std"] }
kuska-handshake ={version = "0.2.0", features = ["async_std"]}
kuska-sodiumoxide = "0.2.5-0"
base64 = "0.11.0"
hex = "0.4.0"
async-std = { version = "1.12.0", features=["unstable", "attributes"] }
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.48", features=["preserve_order", "arbitrary_precision"] }
dirs = "2.0"
futures = "0.3.4"
get_if_addrs = "0.5.3"
regex = "1.3.7"
once_cell = "1.3.1"
async-stream = "0.2.1"
thiserror = "1.0.20"

crossbeam = "0.7.3"
env_logger = "0.7.1"
structopt = "0.3.9"
rand = "0.7.3"